--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
             android:name=".matches.details.MatchDetailsActivity"
             android:exported="true">
         </activity>
+
+        <activity
+            android:name=".players.details.PlayerDetailsActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
